# scarllet

./: .gitignore  Cargo.toml  README.md  project.json
.agents/skills/architecture/: SKILL.md
.journal/04-2026/10-04-2026-multi-process-ai-agent-harness/: ticket.md
.journal/04-2026/10-04-2026-multi-process-ai-agent-harness/efforts/: 01-scaffold-core-boots.md  02-tui-connects-to-core.md  03-module-discovery-hot-reload.md  04-credential-store-config.md  05-tool-invocation-timeout.md  06-agent-lifecycle-cancellation.md  (+2 more)
.journal/04-2026/12-04-2026-default-chat-agent/: contracts.md  copilot-instructions.md  data-model.md  decisions.md  plan.md  ticket.md
.journal/04-2026/12-04-2026-project-reorg-release/: contracts.md  copilot-instructions.md  data-model.md  decisions.md  plan.md  ticket.md
.journal/04-2026/12-04-2026-provider-config-model-selection/: contracts.md  copilot-instructions.md  data-model.md  decisions.md  plan.md  ticket.md
.journal/04-2026/12-04-2026-tui-chat-refactor/: decisions.md  ticket.md
.journal/04-2026/16-04-2026-agent-history-hydration/: decisions.md  ticket.md
.journal/04-2026/16-04-2026-conventions-compliance-fixes/: decisions.md  ticket.md
.journal/04-2026/16-04-2026-markdown-table-rendering/: decisions.md  ticket.md
.journal/04-2026/16-04-2026-session-persistence/: decisions.md  ticket.md
.journal/04-2026/16-04-2026-tree-tool/: decisions.md  ticket.md
.journal/04-2026/16-04-2026-tui-prompt-queue/: decisions.md  ticket.md
.journal/04-2026/17-04-2026-core-transport-refactor/: decisions.md  ticket.md
scripts/: release.ps1
(+31 files in other folders)
