[workspace]
resolver = "2"
members = [
  "packages/rust/scarllet-proto",
  "packages/rust/scarllet-sdk",
  "packages/rust/scarllet-core",
  "packages/rust/scarllet-tui",
  "packages/rust/scarllet-llm",
  "packages/rust/agents/default",
  "packages/rust/tools/terminal",
  "packages/rust/tools/find",
  "packages/rust/tools/grep",
  "packages/rust/tools/edit",
  "packages/rust/tools/write",
]

[profile.release]
lto = true
